public/stylesheets/main.css
.ng-enter {
    -webkit-transition: all 1s linear;
    -moz-transition: all 1s linear;
    -ms-transition: all 1s linear;
    -o-transition: all 1s linear;
    transition: all 1s linear;
    opacity: 0;
}
.ng-enter-active {
    opacity: 1;
}

[ng\:cloak], [ng-cloak], .ng-cloak {
    display: none !important;
}

.navbar-inverse {
    background-color: #0089b6;
    border-color: #0089b6;
}
.navbar-inverse .navbar-brand {
    color: white;
}
body { padding-top: 90px; background-color: #E5E5E5;}

#loading-bar-spinner {
  padding-top: 55px;

}

#loading-bar .bar {
  top: 51px;
  background-color: orange;
}

thead {
    color: white;
    background-color: #EA6248;
}

tbody{
    background-color: white;
}

.navbar-inverse .navbar-nav > li > a {
    color:white;
}

.navbar-inverse .navbar-nav > li > a:hover,
.navbar-inverse .navbar-nav > li > a:focus {
    color:#EA6248;
    background-color: transparent;
}

h1{
    text-align: center;
}

.rounded-bordered {
     border-radius: 25px;
     padding: 20px;
     background-color:white;
     font-size: 16px;
 }

.rounded-bordered-min{
     border-radius: 50px;
     max-width: 500px;
     padding:6px;
     background-color: #EA6248;
     color:white;
     text-align: center;
 }

.tag-min{
    border-radius: 50px;
    max-width: 150px;
    padding:8px;
    background-color: #e0e0ff;
    color:white;
    text-align: center;
}

.artist-description{
    max-width: 500px;
    padding:15px;
    background-color: white;
    color:black;
    text-align: justify;
    font-size: 17px;
    border-radius: 5px;
}

.tag-description{
    max-width: 500px;
    padding:25px;
    text-align: justify;
    font-size: 17px;
    padding-left:25%;
}

.carousel {
    height: 250px;
}

.container-radius{
    border-radius: 10px;
    background-color: white;
}

.header-logo{
    background-color:#66b8d3;
    border-top-left-radius:10px;
    border-bottom-left-radius:95px;
    border-bottom-right-radius:95px;
    border-top-right-radius:0px;
}

.header-title{
    background-color:#66b8d3;
    padding:50px;
    border-top-left-radius:0px;
    border-bottom-left-radius:0px;
    border-bottom-right-radius:0px;
    border-top-right-radius:10px;
    color:white;

}

@media only screen and (max-width: 1000px) {
    [class*="header-"] {
        border-radius:0px;
    }
}

